[package]
name = "sunhouse"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]
license = "Unlicense"
homepage = "https://ndouglas.github.io/sunhouse/"
repository = "https://github.com/ndouglas/sunhouse/"
documentation = "https://ndouglas.github.io/sunhouse/"
readme = "README.md"
keywords = ["sunhouse"]
default-run = "sunhouse"

[lib]
name = "sunhouse"
path = "src/lib.rs"

[[bin]]
name = "sunhouse"
path = "src/main.rs"

[dependencies]
png = "0.17.9"

[dev-dependencies]
assert_approx_eq = "1.1"
cucumber = "0.19.1"
futures = "0.3"

[[example]]
name = "example5"
path = "examples/example5.rs"

[[example]]
name = "example6"
path = "examples/example6.rs"

[[example]]
name = "example8"
path = "examples/example8.rs"


[[test]]
name = "tuples"
harness = false

[[test]]
name = "canvas"
harness = false

[[test]]
name = "matrices"
harness = false

[[test]]
name = "transformations"
harness = false

[[test]]
name = "rays"
harness = false

[[test]]
name = "spheres"
harness = false

[[test]]
name = "lights"
harness = false

[[test]]
name = "materials"
harness = false

[[test]]
name = "world"
harness = false

[[test]]
name = "intersections"
harness = false

[[test]]
name = "camera"
harness = false
